--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -17,6 +17,12 @@
         <item name="android:textSize">18dp</item>
     </style>
 
+    <style name="ContentDynamicTextView" parent="Widget.AppCompat.TextView">
+        <item name="android:textColor">@color/grey600</item>
+        <item name="android:textSize">18dp</item>
+        <item name="android:textStyle">bold</item>
+    </style>
+
     <style name="CurrencySpinnerItem" parent="Widget.AppCompat.TextView.SpinnerItem">
         <item name="android:textColor">@color/grey600</item>
         <item name="android:textSize">18dp</item>
